--- a/app/src/main/res/layout/fragment_sensors.xml
+++ b/app/src/main/res/layout/fragment_sensors.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.xdjbx.bench.ui.fragment.SensorsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/tv_square"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:background="#F44336"
+        android:gravity="center"
+        android:text="Hello World!"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
-</FrameLayout>
+</RelativeLayout>
