Add BaseFragment. Implement DeviceSharedViewModel Location updates

--- a/app/src/main/res/layout/fragment_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_diagnostics.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,12 +6,46 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <Button
-        android:id="@+id/testNotificationButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/buttonLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="Send test notification"
-        />
+        android:gravity="center"
+        >
 
-</FrameLayout>
+        <Button
+            android:id="@+id/testNotificationButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Send test notification"
+
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            />
+
+
+        <Button
+            android:id="@+id/buttonClearEvents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Clear Events"
+            android:layout_margin="5dp"
+
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
+
+
+    <ListView
+        android:id="@+id/event_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/buttonLayout"
+        android:background="@android:color/holo_green_light" >
+
+    </ListView>
+
+</RelativeLayout>
