--- a/app/src/main/res/layout/activity_notifier.xml
+++ b/app/src/main/res/layout/activity_notifier.xml
@@ -30,7 +30,7 @@
 
         <LinearLayout
             android:id="@+id/fullscreen_content_controls"
-            style="@style/Widget.Theme.Sensors.ButtonBar.Fullscreen"
+            style="@style/Widget.Theme.Bench.ButtonBar.Fullscreen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
