--- a/app/src/main/res/layout/fragment_location_list.xml
+++ b/app/src/main/res/layout/fragment_location_list.xml
@@ -41,33 +41,55 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@android:color/holo_orange_light"
-        android:padding="20dp">
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/eventNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:padding="10dp"
+            android:padding="5dp"
             android:text="@string/event_log"
 
             />
 
-        <Button
-            android:id="@+id/buttonGetGeofences"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/buttonLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/eventNameTextView"
-            android:text="Get geofences" />
+            android:gravity="center"
+            >
+            <Button
+                android:id="@+id/buttonSimulateGeofence"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Unused"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:visibility="gone"
+                />
 
-        <ListView
-            android:id="@+id/event_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/buttonGetGeofences"
-            android:background="@android:color/holo_green_light" >
+            <Button
+                android:id="@+id/buttonStartLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start Location"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                />
 
-        </ListView>
+            <TextView
+                android:id="@+id/locationCoordTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="0.0000, 0.0000" />
+
+
+        </LinearLayout>
 
     </RelativeLayout>
 
