--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Sensors" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Bench" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,8 +14,8 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.Sensors.Fullscreen" parent="Theme.Sensors">
-        <item name="android:actionBarStyle">@style/Widget.Theme.Sensors.ActionBar.Fullscreen</item>
+    <style name="Theme.Bench.Fullscreen" parent="Theme.Bench">
+        <item name="android:actionBarStyle">@style/Widget.Theme.Bench.ActionBar.Fullscreen</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@null</item>
     </style>
